[gd_scene load_steps=8 format=3 uid="uid://beo8ces8y1dwx"]

[ext_resource type="Script" path="res://PreHistory/World/Trees/BeehiveTree.gd" id="1_bjnba"]
[ext_resource type="Texture2D" uid="uid://cfky0qo657lxm" path="res://PreHistory/World/Trees/TreeShadow.png" id="4_7uuen"]
[ext_resource type="Texture2D" uid="uid://do10xut17h8yj" path="res://PreHistory/World/Trees/Margarida.png" id="4_48nr4"]
[ext_resource type="Texture2D" uid="uid://cirw12uov31k0" path="res://PreHistory/World/Trees/BeehiveTree.png" id="4_n0m8f"]
[ext_resource type="Texture2D" uid="uid://x6i05wb8ggvo" path="res://PreHistory/World/Trees/Tulipas.png" id="5_p5xag"]

[sub_resource type="CircleShape2D" id="CircleShape2D_u7elq"]
radius = 98.0459

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_64g1c"]
radius = 212.0
height = 424.0

[node name="BeehiveTree" type="StaticBody2D"]
script = ExtResource("1_bjnba")
metadata/_edit_horizontal_guides_ = [-54.0]

[node name="Flowers" type="Node2D" parent="."]

[node name="Margarida" type="Sprite2D" parent="Flowers"]
position = Vector2(-45, 75)
scale = Vector2(2, 2)
texture = ExtResource("4_48nr4")

[node name="Margarida2" type="Sprite2D" parent="Flowers"]
position = Vector2(90, -145)
scale = Vector2(2, 2)
texture = ExtResource("4_48nr4")

[node name="Tulipa" type="Sprite2D" parent="Flowers"]
position = Vector2(130, 55)
scale = Vector2(2, 2)
texture = ExtResource("5_p5xag")

[node name="Tulipa2" type="Sprite2D" parent="Flowers"]
position = Vector2(-180, -40)
scale = Vector2(2, 2)
texture = ExtResource("5_p5xag")

[node name="Bees" type="Node2D" parent="."]

[node name="Shadow" type="Sprite2D" parent="."]
position = Vector2(0, -7.99998)
scale = Vector2(2, 2)
texture = ExtResource("4_7uuen")

[node name="Texture" type="Sprite2D" parent="."]
position = Vector2(0, -124)
scale = Vector2(2, 2)
texture = ExtResource("4_n0m8f")

[node name="tronco" type="CollisionPolygon2D" parent="."]
position = Vector2(0, 3.5)
scale = Vector2(2, 2)
polygon = PackedVector2Array(10, -6.5, 14, -10.5, 10, -13.5, 3, -16, -5, -15.5, -9, -15, -13, -12.5, -14.5, -8, -6.5, -6.5)

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(0, 3.5)
collision_mask = 1026

[node name="folhas" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2(4, -36.5)
scale = Vector2(1, 0.949269)
polygon = PackedVector2Array(-41, -88.4892, -15, -65.3134, -3, -18.962, 13, -65.3134, 49, -96.9167, 31, -133.787, -1, -145.375, -29, -130.627)

[node name="PlayerDetectionSwarm" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionSwarm"]
visible = false
position = Vector2(23, -61)
shape = SubResource("CircleShape2D_u7elq")

[node name="OverallPlayerDetection" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="OverallPlayerDetection"]
visible = false
position = Vector2(7, -68)
shape = SubResource("CapsuleShape2D_64g1c")

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="PlayerDetectionSwarm" to="." method="_on_player_detection_swarm_body_entered"]
[connection signal="body_exited" from="PlayerDetectionSwarm" to="." method="_on_player_detection_swarm_body_exited"]
[connection signal="body_entered" from="OverallPlayerDetection" to="." method="_on_overall_player_detection_body_entered"]
[connection signal="body_exited" from="OverallPlayerDetection" to="." method="_on_overall_player_detection_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
